# Sentinel

./: README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: mvp-roadmap.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: health.rs  lib.rs  listeners.rs  main.rs  metrics.rs  models.rs  services.rs  thermals.rs  watchlist.rs
